Groups Initial build for testing

--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -668,25 +668,75 @@
 
     <string name="no_article.be_first">इस श्रेणी में लेख लिखने वाले पहले लेखक बनें !​</string>
 
-    <string name="groups.join_label">Lorem Ipsum</string>
-    <string name="groups.sections.about">ABOUT</string>
-    <string name="groups.sections.discussions">DISCUSSION</string>
-    <string name="groups.sections.blogs">BLOGS</string>
-    <string name="groups.sections.photos">PHOTOS</string>
-    <string name="groups.sections.videos">VIDEOS</string>
-    <string name="groups.sections.top_posts">TOP POSTS</string>
-    <string name="groups.sections.polls">POLLS</string>
-    <string name="groups.created">Created</string>
-    <string name="groups.anyone_join">Anyone can join</string>
-    <string name="groups.closed_gp">Closed group</string>
-    <string name="groups.invitation_only_gp">Invitation only group</string>
-    <string name="groups.join_group">JOIN GROUP</string>
-    <string name="groups.choose_media">Choose media to upload</string>
-    <string name="groups.search_in">Search in</string>
-    <string name="groups.post_comment">Comments</string>
+    <!--<string name="home_screen.groups.title">SUPPORT GROUPS</string>-->
+    <!--<string name="groups.summary">SUMMARY</string>-->
+    <!--<string name="groups.add_image">ADD IMAGE</string>-->
+    <!--<string name="groups.image_poll">IMAGE POLL</string>-->
+    <!--<string name="groups.text_poll">TEXT POLL</string>-->
+    <!--<string name="groups.sections.about">ABOUT</string>-->
+    <!--<string name="groups.sections.discussions">DISCUSSION</string>-->
+    <!--<string name="groups.sections.blogs">BLOGS</string>-->
+    <!--<string name="groups.sections.photos">PHOTOS</string>-->
+    <!--<string name="groups.sections.videos">VIDEOS</string>-->
+    <!--<string name="groups.sections.top_posts">TOP POSTS</string>-->
+    <!--<string name="groups.sections.polls">POLLS</string>-->
+    <!--<string name="groups.created">Created</string>-->
+    <!--<string name="groups.anyone_join">Anyone can join</string>-->
+    <!--<string name="groups.closed_gp">Closed group</string>-->
+    <!--<string name="groups.invitation_only_gp">Invitation only group</string>-->
+    <!--<string name="groups.join_group">JOIN GROUP</string>-->
+    <!--<string name="groups.choose_media">Choose media to upload</string>-->
+    <!--<string name="groups.search_in">Search</string>-->
+    <!--<string name="groups.post_comment">Comments</string>-->
+    <!--<string name="groups.post_helpful">Helpful</string>-->
+    <!--<string name="groups.post_nothelpful">Not Helpful</string>-->
+    <!--<string name="groups.post_label">POST</string>-->
+    <!--<string name="groups.join_form">JOINING FORM</string>-->
+    <!--<string name="groups.member_label">MEMBERS</string>-->
+    <!--<string name="groups.anonymous">ANONYMOUS</string>-->
+    <!--<string name="groups.membership_request_msg">We have received your request for joining this group. Your membership will be confirmed once it is approved by the moderators of this group.</string>-->
+
+    <string name="groups.join_label">आप इन ग्रुप्स के सदस्य हैं</string>
+    <string name="groups.reported_content">रिपोर्ट की गई सामग्री</string>
+    <string name="groups.moderator_invitation">मध्यस्थ बनने के लिए आमंत्रित करें</string>
+    <string name="groups.unblock_member">सदस्य को अनब्लॉक करें</string>
+    <string name="groups.block_member">सदस्य को ब्लॉक करें</string>
+    <string name="groups.remove_post">पोस्ट हटायें</string>
+    <string name="groups.save_post">पोस्ट सेव करें</string>
+    <string name="groups.delete_post">पोस्ट को हटाएं</string>
+    <string name="groups.turn_notification_on">नोटिफिकेशन ऑन करें </string>
+    <string name="groups.turn_notification_off">नोटिफिकेशन ऑफ करें</string>
+    <string name="groups.enable_comment">कमेंट्स सक्षम करें</string>
+    <string name="groups.disable_comment">कमेंट्स अक्षम करें</string>
+    <string name="groups.report_post">इस पोस्ट को रिपोर्ट करें</string>
+    <string name="groups.block_this_user">इस यूज़र को ब्लॉक करें</string>
+    <string name="groups.pin_post">इस पोस्ट को शीर्ष पर पिन करें</string>
+    <string name="groups.unpin_post">इस पोस्ट को अनपिन करें</string>
+    <string name="groups.all_groups">सभी ग्रुप्स </string>
+    <string name="groups.groups">ग्रुप्स</string>
+    <string name="groups.reported_by">इनके द्वारा रिपोर्ट</string>
+    <string name="groups.persons">व्यक्तियों</string>
+    <string name="groups.no_action">कोई कार्रवाई नही</string>
+    <string name="groups.block_user">यूजर को ब्लॉक करें</string>
+    <string name="groups.hide_content">सामग्री छुपाएं</string>
+    <string name="groups.invite_members">सदस्यों को आमंत्रित करें</string>
+    <string name="groups.invite_family">आप अपने दोस्तों और परिवार को इस समूह में आमंत्रित कर सकते हैं</string>
+    <string name="groups.disable_notification">नोटीफिकेशन निष्क्रिय किया गया</string>
+    <string name="groups.disable_notification_this_gp">इस समूह से नोटिफिकेशन अक्षम करें</string>
+    <string name="groups.leave_group">ग्रुप छोड़ें </string>
+    <string name="groups.exit_gp">आप किसी भी समय समूह से बाहर निकलने का निर्णय  ले सकते हैं</string>
+    <string name="groups.sure_leave_gp">क्या आप वाकई इस ग्रुप को छोड़ना चाहते हैं</string>
+    <string name="groups.leave">छोड़ना</string>
+    <string name="groups.membership_req">सदस्यता अनुरोध</string>
+    <string name="groups.now_member_gp">अब आप ग्रुप  के सदस्य हैं</string>
+    <string name="groups.approval_req_sent">आपका अनुरोध स्वीकृति के लिए ग्रुप एडमिन को भेजा गया है</string>
+    <string name="groups.support_groups">सपोर्ट ग्रुप्स </string>
     <string name="groups.post_helpful">Helpful</string>
     <string name="groups.post_nothelpful">Not Helpful</string>
-    <string name="groups.post_label">POST</string>
+    <string name="groups.summary">SUMMARY</string>
+    <string name="groups.add_image">ADD IMAGE</string>
+    <string name="groups.image_poll">IMAGE POLL</string>
+    <string name="groups.text_poll">TEXT POLL</string>
 
     <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
@@ -714,7 +764,9 @@
 
     <string name="report.reason">ये अनुपयुक्त है क्योंकि</string>
     <string name="report.abuse">ये अपमानजनक हैं</string>
-    <string name="report.spam">यह धार्मिक भावनाओं को नुकसान पहुंचाता है</string>
+    <string name="report.religious">यह धार्मिक भावनाओं को नुकसान पहुंचाता है</string>
+    <string name="report.inappro">यह अनुचित है</string>
+    <string name="report.spam">यह स्पैम है</string>
     <string name="report.not_relevant">कोई  अन्य</string>
     <string name="reply">जवाब</string>
 
