--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -660,25 +660,75 @@
 
     <string name="no_article.be_first">ह्या श्रेणी मध्ये लेख लिहिणारे पहिले लेखक  व्हा</string>
 
-    <string name="groups.join_label">Lorem Ipsum</string>
-    <string name="groups.sections.about">ABOUT</string>
-    <string name="groups.sections.discussions">DISCUSSION</string>
-    <string name="groups.sections.blogs">BLOGS</string>
-    <string name="groups.sections.photos">PHOTOS</string>
-    <string name="groups.sections.videos">VIDEOS</string>
-    <string name="groups.sections.top_posts">TOP POSTS</string>
-    <string name="groups.sections.polls">POLLS</string>
-    <string name="groups.created">Created</string>
-    <string name="groups.anyone_join">Anyone can join</string>
-    <string name="groups.closed_gp">Closed group</string>
-    <string name="groups.invitation_only_gp">Invitation only group</string>
-    <string name="groups.join_group">JOIN GROUP</string>
-    <string name="groups.choose_media">Choose media to upload</string>
-    <string name="groups.search_in">Search in</string>
-    <string name="groups.post_comment">Comments</string>
+    <!--<string name="home_screen.groups.title">SUPPORT GROUPS</string>-->
+    <!--<string name="groups.summary">SUMMARY</string>-->
+    <!--<string name="groups.add_image">ADD IMAGE</string>-->
+    <!--<string name="groups.image_poll">IMAGE POLL</string>-->
+    <!--<string name="groups.text_poll">TEXT POLL</string>-->
+    <!--<string name="groups.join_label">GROUPS YOU ARE A MEMBER OF</string>-->
+    <!--<string name="groups.sections.about">ABOUT</string>-->
+    <!--<string name="groups.sections.discussions">DISCUSSION</string>-->
+    <!--<string name="groups.sections.blogs">BLOGS</string>-->
+    <!--<string name="groups.sections.photos">PHOTOS</string>-->
+    <!--<string name="groups.sections.videos">VIDEOS</string>-->
+    <!--<string name="groups.sections.top_posts">TOP POSTS</string>-->
+    <!--<string name="groups.sections.polls">POLLS</string>-->
+    <!--<string name="groups.created">Created</string>-->
+    <!--<string name="groups.anyone_join">Anyone can join</string>-->
+    <!--<string name="groups.closed_gp">Closed group</string>-->
+    <!--<string name="groups.invitation_only_gp">Invitation only group</string>-->
+    <!--<string name="groups.join_group">JOIN GROUP</string>-->
+    <!--<string name="groups.choose_media">Choose media to upload</string>-->
+    <!--<string name="groups.search_in">Search</string>-->
+    <!--<string name="groups.post_comment">Comments</string>-->
+    <!--<string name="groups.post_helpful">Helpful</string>-->
+    <!--<string name="groups.post_nothelpful">Not Helpful</string>-->
+    <!--<string name="groups.post_label">POST</string>-->
+    <!--<string name="groups.join_form">JOINING FORM</string>-->
+    <!--<string name="groups.member_label">MEMBERS</string>-->
+    <!--<string name="groups.reported_content">REPORTED CONTENT</string>-->
+    <!--<string name="groups.anonymous">ANONYMOUS</string>-->
+    <!--<string name="groups.membership_request_msg">We have received your request for joining this group. Your membership will be confirmed once it is approved by the moderators of this group.</string>-->
+
+    <string name="groups.moderator_invitation">Invite To Be a Moderator</string>
+    <string name="groups.unblock_member">Unblock Member</string>
+    <string name="groups.block_member">Block Member</string>
+    <string name="groups.remove_post">Remove Post</string>
+    <string name="groups.save_post">Save Post</string>
+    <string name="groups.delete_post">Delete Post</string>
+    <string name="groups.turn_notification_on">Turn On Notification</string>
+    <string name="groups.turn_notification_off">Turn Off Notification</string>
+    <string name="groups.enable_comment">Enable Comments</string>
+    <string name="groups.disable_comment">Disable Comments</string>
+    <string name="groups.report_post">Report This Post</string>
+    <string name="groups.block_this_user">Block This User</string>
+    <string name="groups.pin_post">Pin This Post To Top</string>
+    <string name="groups.unpin_post">Unpin This post</string>
+    <string name="groups.all_groups">ALL GROUPS</string>
+    <string name="groups.groups">GROUPS</string>
+    <string name="groups.reported_by">Reported By</string>
+    <string name="groups.persons">Persons</string>
+    <string name="groups.no_action">No Action</string>
+    <string name="groups.block_user">Block User</string>
+    <string name="groups.hide_content">Hide Content</string>
+    <string name="groups.invite_members">INVITE MEMBERS</string>
+    <string name="groups.invite_family">You can invite your friends and family to this group</string>
+    <string name="groups.disable_notification">DISABLE NOTIFICATIONS</string>
+    <string name="groups.disable_notification_this_gp">Disable notifications from this group</string>
+    <string name="groups.leave_group">LEAVE GROUP</string>
+    <string name="groups.exit_gp">You can choose to exit group at any point in time</string>
+    <string name="groups.sure_leave_gp">Are you sure you want to leave this group</string>
+    <string name="groups.leave">Leave</string>
+    <string name="groups.membership_req">MEMBERSHIP REQUEST</string>
+    <string name="groups.now_member_gp">You are now member of the group</string>
+    <string name="groups.approval_req_sent">Your request has been sent to group admin for approval</string>
+    <string name="groups.support_groups">Support Groups</string>
     <string name="groups.post_helpful">Helpful</string>
     <string name="groups.post_nothelpful">Not Helpful</string>
-    <string name="groups.post_label">POST</string>
+    <string name="groups.summary">SUMMARY</string>
+    <string name="groups.add_image">ADD IMAGE</string>
+    <string name="groups.image_poll">IMAGE POLL</string>
+    <string name="groups.text_poll">TEXT POLL</string>
 
     <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
@@ -705,7 +755,9 @@
 
     <string name="report.reason">हे उपयोगी नाही कारण</string>
     <string name="report.abuse">हे अपमानास्पद आहे.</string>
-    <string name="report.spam">हे धार्मिक भावनांना नुकसान पोहचवत आहे.</string>
+    <string name="report.religious">हे धार्मिक भावनांना नुकसान पोहचवत आहे.</string>
+    <string name="report.inappro">अयोग्य आहे</string>
+    <string name="report.spam">स्पॅम आहे</string>
     <string name="report.not_relevant">दुसरं अन्य</string>
     <string name="reply">उत्तर द्या</string>
 </resources>
