--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -661,12 +661,77 @@
 
     <string name="no_article.be_first">Be the first one to write articles in this category!</string>
 
-    <string name="home_screen.groups.title">SUPPORT GROUPS</string>
+    <!--<string name="groups.sections.about">ABOUT</string>-->
+    <!--<string name="groups.sections.discussions">DISCUSSION</string>-->
+    <!--<string name="groups.sections.blogs">BLOGS</string>-->
+    <!--<string name="groups.sections.photos">PHOTOS</string>-->
+    <!--<string name="groups.sections.videos">VIDEOS</string>-->
+    <!--<string name="groups.sections.top_posts">TOP POSTS</string>-->
+    <!--<string name="groups.sections.polls">POLLS</string>-->
+    <!--<string name="groups.created">Created</string>-->
+    <!--<string name="groups.anyone_join">Anyone can join</string>-->
+    <!--<string name="groups.closed_gp">Closed group</string>-->
+    <!--<string name="groups.invitation_only_gp">Invitation only group</string>-->
+    <!--<string name="groups.join_group">JOIN GROUP</string>-->
+    <!--<string name="groups.choose_media">Choose media to upload</string>-->
+    <!--<string name="groups.search_in">Search</string>-->
+    <!--<string name="groups.post_comment">Comments</string>-->
+    <!--<string name="groups.post_helpful">Helpful</string>-->
+    <!--<string name="groups.post_nothelpful">Not Helpful</string>-->
+    <!--<string name="groups.post_label">POST</string>-->
+    <!--<string name="groups.join_form">JOINING FORM</string>-->
+    <!--<string name="groups.member_label">MEMBERS</string>-->
+    <!--<string name="groups.anonymous">ANONYMOUS</string>-->
+    <!--<string name="groups.membership_request_msg">We have received your request for joining this group. Your membership will be confirmed once it is approved by the moderators of this group.</string>-->
+
+    <string name="groups.join_label">GROUPS YOU ARE A MEMBER OF</string>
+    <string name="groups.reported_content">REPORTED CONTENT</string>
+    <string name="groups.moderator_invitation">INVITE TO BE A MODERATOR</string>
+    <string name="groups.unblock_member">UNBLOCK MEMBER</string>
+    <string name="groups.block_member">BLOCK MEMBER</string>
+    <string name="groups.remove_post">REMOVE POST</string>
+    <string name="groups.save_post">SAVE POST</string>
+    <string name="groups.delete_post">DELETE POST</string>
+    <string name="groups.turn_notification_on">Turn On Notification</string>
+    <string name="groups.turn_notification_off">Turn Off Notification</string>
+    <string name="groups.enable_comment">ENABLE COMMENTS</string>
+    <string name="groups.disable_comment">DISABLE COMMENTS</string>
+    <string name="groups.report_post">REPORT THIS POST</string>
+    <string name="groups.block_this_user">BLOCK THIS USER</string>
+    <string name="groups.pin_post">PIN THIS POST TO TOP</string>
+    <string name="groups.unpin_post">UNPIN THIS POST</string>
+    <string name="groups.all_groups">ALL GROUPS</string>
+    <string name="groups.groups">GROUPS</string>
+    <string name="groups.reported_by">Reported By</string>
+    <string name="groups.persons">Persons</string>
+    <string name="groups.no_action">NO ACTION</string>
+    <string name="groups.block_user">BLOCK USER</string>
+    <string name="groups.hide_content">HIDE CONTENT</string>
+    <string name="groups.invite_members">INVITE MEMBERS</string>
+    <string name="groups.invite_family">You can invite your friends and family to this group</string>
+    <string name="groups.disable_notification">DISABLE NOTIFICATIONS</string>
+    <string name="groups.disable_notification_this_gp">Disable notifications from this group</string>
+    <string name="groups.leave_group">LEAVE GROUP</string>
+    <string name="groups.exit_gp">You can choose to exit group at any point in time</string>
+    <string name="groups.sure_leave_gp">Are you sure you want to leave this group</string>
+    <string name="groups.view_all_reported">View all the reported content for this group</string>
+    <string name="groups.leave">LEAVE</string>
+    <string name="groups.membership_req">MEMBERSHIP REQUEST</string>
+    <string name="groups.now_member_gp">You are now member of the group</string>
+    <string name="groups.approval_req_sent">Your request has been sent to group admin for approval</string>
+    <string name="groups.support_groups">Support Groups</string>
+    <string name="groups.post_helpful">Helpful</string>
+    <string name="groups.post_nothelpful">Not Helpful</string>
     <string name="groups.summary">SUMMARY</string>
     <string name="groups.add_image">ADD IMAGE</string>
     <string name="groups.image_poll">IMAGE POLL</string>
     <string name="groups.text_poll">TEXT POLL</string>
-    <string name="groups.join_label">GROUPS YOU ARE A MEMBER OF</string>
+    <string name="groups.anonymous">ANONYMOUS</string>
+    <string name="groups.anyone_join">Anyone can join</string>
+    <string name="groups.closed_gp">Closed group</string>
+    <string name="groups.invitation_only_gp">Invitation only group</string>
+    <string name="groups.created">Created</string>
+    <string name="groups.member_label">MEMBERS</string>
     <string name="groups.sections.about">ABOUT</string>
     <string name="groups.sections.discussions">DISCUSSION</string>
     <string name="groups.sections.blogs">BLOGS</string>
@@ -674,21 +739,14 @@
     <string name="groups.sections.videos">VIDEOS</string>
     <string name="groups.sections.top_posts">TOP POSTS</string>
     <string name="groups.sections.polls">POLLS</string>
-    <string name="groups.created">Created</string>
-    <string name="groups.anyone_join">Anyone can join</string>
-    <string name="groups.closed_gp">Closed group</string>
-    <string name="groups.invitation_only_gp">Invitation only group</string>
-    <string name="groups.join_group">JOIN GROUP</string>
-    <string name="groups.choose_media">Choose media to upload</string>
     <string name="groups.search_in">Search</string>
-    <string name="groups.post_comment">Comments</string>
-    <string name="groups.post_helpful">Helpful</string>
-    <string name="groups.post_nothelpful">Not Helpful</string>
-    <string name="groups.post_label">POST</string>
     <string name="groups.join_form">JOINING FORM</string>
-    <string name="groups.member_label">MEMBERS</string>
-    <string name="groups.reported_content">REPORTED CONTENT</string>
-    <string name="groups.anonymous">ANONYMOUS</string>
+    <string name="groups.membership_pending">Membership Pending</string>
+    <string name="groups.why_leave">Please let us know why you are leaving.</string>
+    <string name="groups.leave_be_back">This is temporary. I\'ll be back.</string>
+    <string name="groups.spend_time">I spend too much time using Momspresso.</string>
+    <string name="groups.not_useful">I don\'t find Momspresso useful.</string>
+    <string name="groups.how_to_use">I don\'t understand how to use Momspresso</string>
 
     <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
@@ -713,9 +771,11 @@
     <string name="short_s.edit_reply_fail">Failed to edit reply. Please try again</string>
     <string name="short_s.delete_reply_fail">Failed to delete reply. Please try again</string>
 
-    <string name="report.reason">Inappropriate because</string>
-    <string name="report.abuse">Its abusive</string>
-    <string name="report.spam">It hurts religious sentiments</string>
+    <string name="report.reason">Report Content because</string>
+    <string name="report.abuse">It\'s abusive</string>
+    <string name="report.religious">It hurts religious feeling</string>
+    <string name="report.inappro">It\'s Inappropriate</string>
+    <string name="report.spam">It\'s Spam</string>
     <string name="report.not_relevant">Any other</string>
     <string name="reply">Reply</string>
 
