--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -726,17 +726,44 @@
     <string name="groups.leave_group">ग्रुप छोड़ें </string>
     <string name="groups.exit_gp">आप किसी भी समय समूह से बाहर निकलने का निर्णय  ले सकते हैं</string>
     <string name="groups.sure_leave_gp">क्या आप वाकई इस ग्रुप को छोड़ना चाहते हैं</string>
+    <string name="groups.view_all_reported">ग्रुप के सभी रिपोर्टेड कंटेंट को देखें </string>
     <string name="groups.leave">छोड़ना</string>
     <string name="groups.membership_req">सदस्यता अनुरोध</string>
     <string name="groups.now_member_gp">अब आप ग्रुप  के सदस्य हैं</string>
     <string name="groups.approval_req_sent">आपका अनुरोध स्वीकृति के लिए ग्रुप एडमिन को भेजा गया है</string>
     <string name="groups.support_groups">सपोर्ट ग्रुप्स </string>
-    <string name="groups.post_helpful">Helpful</string>
-    <string name="groups.post_nothelpful">Not Helpful</string>
+    <string name="groups.post_helpful">उपयोगी </string>
+    <string name="groups.post_nothelpful">अनुपयोगी </string>
     <string name="groups.summary">SUMMARY</string>
-    <string name="groups.add_image">ADD IMAGE</string>
-    <string name="groups.image_poll">IMAGE POLL</string>
-    <string name="groups.text_poll">TEXT POLL</string>
+    <string name="groups.add_image">इमेज लगायें </string>
+    <string name="groups.image_poll">इमेज पोल </string>
+    <string name="groups.text_poll">टेक्स्ट पोल </string>
+    <string name="groups.anonymous">अनाम </string>
+    <string name="groups.anyone_join">कोई भी शामिल हो सकता है </string>
+    <string name="groups.closed_gp">क्लोज्ड ग्रुप </string>
+    <string name="groups.invitation_only_gp">आमंत्रण केवल समूह</string>
+    <string name="groups.created">Created</string>
+    <string name="groups.member_label">सदस्य </string>
+    <string name="groups.sections.about">ABOUT</string>
+    <string name="groups.sections.discussions">चर्चा </string>
+    <string name="groups.sections.blogs">BLOGS</string>
+    <string name="groups.sections.photos">फोटो </string>
+    <string name="groups.sections.videos">VIDEOS</string>
+    <string name="groups.sections.top_posts">TOP POSTS</string>
+    <string name="groups.sections.polls">चुनाव </string>
+    <string name="groups.search_in">Search</string>
+    <string name="groups.join_form">JOINING FORM</string>
+    <string name="groups.membership_pending">सदस्यता पेंडिंग </string>
+    <string name="groups.why_leave">Please let us know why you are leaving.</string>
+    <string name="groups.leave_be_back">This is temporary. I\'ll be back.</string>
+    <string name="groups.spend_time">I spend too much time using Momspresso.</string>
+    <string name="groups.not_useful">I don\'t find Momspresso useful.</string>
+    <string name="groups.how_to_use">I don\'t understand how to use Momspresso</string>
+    <string name="groups.user_blocked_msg">आप इस ग्रुप से ब्लॉक कर दिए गए हैं </string>
+    <string name="groups.user_membership_rejected_msg">आपकी सदयस्ता अस्वीकार कर दी गयी है </string>
+    <string name="groups.join_group">ग्रुप में शामिल हों </string>
+    <string name="groups.ask_something">कुछ पूछिए ...</string>
+    <string name="groups.post_label">पोस्ट्स </string>
 
     <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
