--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -658,6 +658,7 @@
     <string name="guide.sub_topics_list_tour">अधिक श्रेणियों को देखने के लिए यहां क्लिक करें</string>
     <string name="guide.share_like_bookmark_tour">इस पोस्ट को शेयर, बुकमार्क या पसंद करे</string>
     <string name="guide.listen_tour">इस ब्लॉग को सुनने के लिए यहां क्लिक करें</string>
+    <string name="guide.groups_tour">सपोर्ट ग्रुप्स में शामिल हों। सवाल पूछें (यहां तक ​​कि पहचान गुप्त रख कर भी ) \nऔर सपोर्ट ग्रुप से जवाब पाएं ।</string>
 
     <string name="author_type.blogger">ब्लॉगर्स</string>
     <string name="author_type.editor">एडिटर्स</string>
@@ -764,6 +765,7 @@
     <string name="groups.join_group">ग्रुप में शामिल हों </string>
     <string name="groups.ask_something">कुछ पूछिए ...</string>
     <string name="groups.post_label">पोस्ट्स </string>
+    <string name="groups.edit_post">EDIT POST</string>
 
     <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
