--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -248,6 +248,7 @@
     <string name="permission_phone_state_rationale">Phone state permission is required to keep you updated with latest content via notications.</string>
     <string name="permision_available_init">All required permissions have been granted.</string>
     <string name="permission_calendar_rationale">Calendar permission is needed to add a reminder.</string>
+    <string name="permission_storage_story">Storage permission is required for publishing story.</string>
 
     <string name="home.toolbar.title">ट्रेंडिंग</string>
     <string name="explore_listing.explore_categories.title">आप इन श्रेणियों को भी देख सकते हैं</string>
