--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -246,6 +246,7 @@
     <string name="permission_phone_state_rationale">Phone state permission is required to keep you updated with latest content via notifications.</string>
     <string name="permision_available_init">All required permissions have been granted.</string>
     <string name="permission_calendar_rationale">Calendar permission is needed to add a reminder.</string>
+    <string name="permission_storage_story">Storage permission is required for publishing story.</string>
 
     <string name="home.toolbar.title">TRENDING</string>
     <string name="explore_listing.explore_categories.title">YOU COULD ALSO EXPLORE THE CATEGORIES</string>
