--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -799,5 +799,7 @@
     <string name="report.spam">यह स्पैम है</string>
     <string name="report.not_relevant">कोई  अन्य</string>
     <string name="reply">जवाब</string>
+    <string name="profile_completion">Profile Completion</string>
+    <string name="improve_reachability">Improve the reachability by updating the bio.</string>
 
 </resources>
