--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -789,4 +789,6 @@
     <string name="report.spam">स्पॅम आहे</string>
     <string name="report.not_relevant">दुसरं अन्य</string>
     <string name="reply">उत्तर द्या</string>
+    <string name="profile_completion">Profile Completion</string>
+    <string name="improve_reachability">Improve the reachability by updating the bio.</string>
 </resources>
