--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -638,7 +638,7 @@
     <string name="language_label.marathi">मराठी</string>
     <string name="language_label.bengali">বাংলা</string>
     <string name="language_label.tamil">தமிழ்</string>
-    <string name="language_label.telegu">తెలుగ</string>
+    <string name="language_label.telegu">తెలుగు</string>
 
     <string name="choose_pref_lang">तुमची प्राधान्य भाषा निवडा</string>
     <string name="choose_pref_lang.cancel">कॅन्सल</string>
