--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -639,7 +639,7 @@
     <string name="language_label.marathi">मराठी</string>
     <string name="language_label.bengali">বাংলা</string>
     <string name="language_label.tamil">தமிழ்</string>
-    <string name="language_label.telegu">తెలుగ</string>
+    <string name="language_label.telegu">తెలుగు</string>
 
     <string name="choose_pref_lang">Choose your preferred language</string>
     <string name="choose_pref_lang.cancel">CANCEL</string>
